examples/test/testpolicy6445.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6445
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key37: value32
      key34: value39
      key24: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value28
          key14: value30
      podSelector:
        matchLabels:
          key46: value3
